---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ????
  Changes:
    - Removed stray on_cancelled_deconstruction event registration that was overridden
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-06-20
  Changes:
    - Removed the redundant hidden surface because it's... well... redundant
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-06-18
  Changes:
    - Ignore the internal recipe in statistics
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-06-18
  Features:
    - Using quezler certified jankery, you will now have zero script overhead when idle/full power. There will only be overhead when the state changes to/from active.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-04-22
  Changes:
    - Reduced update time by ~40% by storing machine state in storage, using 2 fewer API calls.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-04-22
  Changes:
    - Reduced update time by ~35% by altering validity checks to only run when required.
  Bugfixes:
    - Fixed a crash when using a deconstruction planner in editor mode and 'instant deconstruct' is enabled
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-04-22
  Features:
    - Initial release