@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
-Date: ????
+Date: 2025-06-22
   Changes:
+    - Added missing 1.1.0 migrations, lol
+    - Cleaned up 1.1.2 migrations
     - Removed stray on_cancelled_deconstruction event registration that was overridden
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
